<resources>
    <string name="app_name">Pixstory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_ShowOnPermisstion">Please Allow permission for your app.
            If you deny permissions will not be able to use functionality of this app.</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="pixstory">Pixstory</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="skip_button">"     Skip     "</string>
    <string name="ok">OK</string>
    <string name="lorem_ipsum">Lorem Ipsum dolor sit,</string>
    <string name="consectetur">Consectetur adipiscing elit.</string>
    <string name="login">Log in</string>
    <string name="login_button">"     Log in     "</string>
    <string name="signup">Sign up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="trouble_logging_in">Trouble logging in?</string>
    <string name="by_logging_in">By logging in you agree to our <u>terms of use and privacy policy</u></string>
    <string name="mobile">Mobile</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="linked_in">Linkedin</string>
    <string name="mobile_number">Enter mobile no.</string>
    <string name="mobile_numbers">+91-XXXXXXXXXX</string>
    <string name="proceed_button">"     Proceed     "</string>
    <string name="help_us">Help us know you better</string>
    <string name="highlight_your_interest">Highlight Your Interests</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last name</string>
    <string name="preferred_user_name">Set preferred username</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="home_country">Home Country</string>
    <string name="set_login_password">Set login password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="show">Show</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="forgot_password">Forgot password</string>
    <string name="get_help">Get help</string>
    <string name="forgot_password__message_mobile">We need to verify your account in order to help you reset your login password</string>
    <string name="enter_registered_mobile_number">Enter registered mobile number</string>
    <string name="enter_registered_email_address">Enter registered Email Address</string>
    <string name="or_via_email">Or Via Email</string>
    <string name="verification_code">Verification code</string>
    <string name="enter_otp_mobile">Enter OTP received on</string>
    <string name="enter_otp_email">We have sent a verification mail to your registered email address.\n\nUse the link or the verification code provided.</string>
    <string name="resent_opt">Resend OTP</string>
    <string name="resent_verification_mail">Resend verification mail</string>
    <string name="wait_for_otp">Wait for OTP:</string>
    <string name="Verify">Verify</string>
    <string name="change_mobile_number"><u>Change mobile number</u></string>
    <string name="change_email_address"><u>Change email address</u></string>
    <string name="set_new_password">Set new password</string>
    <string name="new_password">New password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="change_password_button">"     Change Password     "</string>
    <string name="change_password">Change Password</string>
    <string name="otp_verified_successfully">OTP verified\nsuccessfully</string>
    <string name="facebook_app_id">941869356210706</string>
    <string name="fb_login_protocol_scheme">fb941869356210706</string>
    <string name="loading">Loading</string>
    <string name="signed_user">Signed User</string>
    <string name="create_connect_verify">Create. Connect. Verify</string>
    <string name="or_via">Or via</string>
    <string name="control_your_privacy">Control your privacy</string>
    <string name="get_in">Get in</string>
    <string name="set_your_preferences">Set your preferences</string>
    <string name="show_profile_activity_other">Show your profile activities to others</string>
    <string name="show_profile_activity_people">Show my porfile activites to people of siimilar interests</string>
    <string name="allow_others">Allow others to message you</string>
    <string name="help_other">Help other people with their queries</string>
    <string name="pick_items">Pick 1 or more to continue</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="chat">Chat</string>
    <string name="you">You</string>
    <string name="others">Others</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="upload_vision">Uploading image&#8230;\nVision API on Progress</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="share_app">Share App</string>
    <string name="subscribe">Subscribe</string>
    <string name="faqs">FAQs</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="pro">Pro</string>
    <string name="john_doe">John Doe</string>
    <string name="integrity_score">Integrity Score:</string>
    <string name="trending">Trending</string>
    <string name="lorem_ipsum_message">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc accumsan risus et condimentum luctus. Duis elementum tellus in elit fringilla rhoncus.</string>
    <string name="support">Support</string>
    <string name="challenge">Challenges</string>
    <string name="tag_in">Notes</string>
    <string name="the_content">The content of this story is subject to a dispute which xxx chalanges</string>
    <string name="select_date">Select Date</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="cancel">Cancel</string>
    <string name="title_location_permission">location</string>
    <string name="text_location_permission">location permission</string>
    <string name="by_interests">By Interests</string>
    <string name="nearby">Nearby</string>
    <string name="friend">Friend</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow <b>Username</b>?</string>
    <string name="type">Type</string>
    <string name="stories">Stories</string>
    <string name="pages">Pages</string>
    <string name="photos">Photos</string>
    <string name="users">Users</string>
    <string name="results">Results</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="inbox">Inbox</string>
    <string name="bulletin_board">Bulletin board</string>
    <string name="save">Save</string>
    <string name="account_setting">Account Settings</string>
    <string name="privacy">Privacy Settings</string>
    <string name="promembership_setting">Pro Membership </string>
    <string name="pixpoints"> Pixpoints</string>
    <string name="terms_of_use"> Terms of use</string>
    <string name="privacy_policy"> Privacy Policy</string>
    <string name="contact_us"> Contact us</string>
    <string name="about">About</string>
    <string name="edit">Edit</string>
    <string name="user_dob">User DOB</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit_your_question">Submit your question</string>
    <string name="title">&#8230;</string>
    <string name="age">Age</string>
    <string name="nat">nat</string>
    <string name="nature">Nature</string>
    <string name="Add">Add</string>
    <string name="Remove">Remove</string>
    <string name="Painting">Painting</string>
    <string name="Art">Art</string>
    <string name="Food">Food</string>
    <string name="Culture">Culture</string>
    <string name="Link">Link</string>
    <string name="Jon_Title">Job Tiltle</string>
    <string name="Company_Name">Company_Name</string>
    <string name="Current">Current</string>
    <string name="Previous">Previous</string>
    <string name="UI_Designer">UI/UX Designer | 18Pixels</string>
    <string name="Singsys">UI Designer | Singsys</string>
    <string name="Html_Singsys">HTML Developer | Singsys</string>
    <string name="Send">Send</string>
    <string name="Degree">Degree</string>
    <string name="Institute">Institute</string>
    <string name="University">University</string>
    <string name="Bcom">B.Com | LMS College | Lucknow University</string>
    <string name="DGWRA">DGWRA | MAAC</string>
    <string name="Modify">Modify</string>
    <string name="Text_Area">Text_Area(125 character space)</string>
    <string name="URL">URL</string>
    <string name="LargeContent">Lorem ipsum doler sit amet, consec adipis elit, sed do eiusmod tempor inci Lorem dolor sit amet </string>
    <string name="date">800</string>
    <string name="higher">An higher integrity score  will help post rank higher.</string>
    <string name="You_earnpoint">You earned xxx points for xxx</string>
    <string name="You_lostpointst">You lost xxx points for xxx</string>
    <string name="Work">work</string>
    <string name="Education">Education</string>
    <string name="Citation">Citation</string>
    <string name="interest">interest</string>
    <string name="Travel">Travel</string>
    <string name="Sport">Sports</string>
    <string name="Details">Details</string>
    <string name="Badge">Badge</string>
    <string name="Ronald">Ronald Richards</string>
    <string name="Age">Age 26</string>
    <string name="New_delhi">New delhi | India</string>
    <string name="see_more">see more</string>
    <string name="Public">Public figure</string>
    <string name="Topic">Topic Experts</string>
    <string name="Star">Star User</string>
    <string name="created">Created</string>
    <string name="friends">Friends</string>
    <string name="your_photos">"   Your photos   "</string>
    <string name="favourites">"   Favourites   "</string>
    <string name="phone_gallery">"   Phone Gallery   "</string>
    <string name="HintPin">****</string>
</resources>