<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:background="@drawable/shape_white_3_3_3_3"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_close_black_24dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/source_sans_pro_bold"
                android:padding="@dimen/_5sdp"
                android:text="@string/verification_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/verification_code_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/source_sans_pro_regular"
                android:padding="@dimen/_5sdp"
                android:text="@string/enter_otp_mobile"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <com.chaos.view.PinView
                android:id="@+id/firstPinView"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:cursorVisible="true"
                android:fontFamily="@font/source_sans_pro_regular"
                android:gravity="center"
                android:hint="@string/HintPin"
                android:inputType="number"
                android:padding="@dimen/_5sdp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cursorColor="@color/black"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="false"
                app:itemCount="4"
                app:itemRadius="@dimen/_3sdp"
                app:itemSpacing="0dp"
                app:lineColor="@color/colorPrimary"
                app:lineWidth="@dimen/_1sdp"
                app:viewType="rectangle" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/resent_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/resent_opt"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/wait_for_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/wait_for_otp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/verify"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginEnd="@dimen/_25sdp"
                    android:background="@drawable/shape_neon_25_25_25_25"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:gravity="center|bottom"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/Verify"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/_10sdp"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/change_verification_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/source_sans_pro_regular"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="@string/change_mobile_number"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/skip"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/shape_neon_25_25_25_25"
                    android:fontFamily="@font/source_sans_pro_bold"
                    android:gravity="center"
                    android:text="@string/skip"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_gravity="center_horizontal"
                    android:visibility="gone"/>

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
