<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.login_dashboard.login_signup_dashboard.fragments.signup.SignUpFragment">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/source_sans_pro_regular"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/trouble_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_2sdp"
            android:layout_gravity="start"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/trouble_logging_in" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
